# whisper-multifile

./: .env.example  README.md  main.py  pyproject.toml
